remove deprecated bukkit api calls